--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Portifólio Cacio de Castro" />
+  <meta name="author" content="Cacio de Castro">
   <title>Cacio | Desenvolvedor Web</title>
 </head>
 
